@startuml
' Layout
skinparam linetype ortho
hide circle
hide methods
hide stereotypes

' =====================
' ENTITIES (TypeORM current state)
' =====================

entity "User" as User {
  +id: Int <<PK>>
  email: String <<unique>>
  forename: String?
  surname: String?
  username: String?
  password: String
  isActive: Boolean (default: true)
  createdAt: DateTime
  updatedAt: DateTime
}

entity "Session" as Session {
  +id: Int <<PK>>
  userId: Int <<FK>>
  tokenHash: String
  createdAt: DateTime
  expiresAt: DateTime
  lastUsedAt: DateTime?
  userAgent: String?
  ip: String?
  revokedAt: DateTime?
}

entity "PasswordResetToken" as PasswordResetToken {
  +id: Int <<PK>>
  userId: Int <<FK>>
  tokenHash: String
  createdAt: DateTime
  expiresAt: DateTime
  usedAt: DateTime?
}

entity "Role" as Role {
  +id: Int <<PK>>
  name: String <<unique>>
}

entity "Permission" as Permission {
  +id: Int <<PK>>
  name: String <<unique>>
  description: String?
  category: String
  createdAt: DateTime
  updatedAt: DateTime
}

' Join: Role <-> Permission
entity "RolePermission" as RolePermission {
  +id: Int <<PK>>
  roleId: Int <<FK>>
  permissionId: Int <<FK>>
  createdAt: DateTime
}

' Join: User <-> Role
entity "UserRole" as UserRole {
  +id: Int <<PK>>
  userId: Int <<FK>>
  roleId: Int <<FK>>
  assignedAt: DateTime
}

' =====================
' RELATIONSHIPS
' =====================

' Authentication relations
User ||--o{ Session : "sessions"
User ||--o{ PasswordResetToken : "passwordResetTokens"

' Authorization relations
User ||--o{ UserRole
UserRole }o--|| Role

Role ||--o{ RolePermission
RolePermission }o--|| Permission

@enduml
